fixed: z-index issue with overview header and cancel link inconsistencies

--- a/src/apps/properties/src/views/PropertyBlueprint/PropertyBlueprint.less
+++ b/src/apps/properties/src/views/PropertyBlueprint/PropertyBlueprint.less
@@ -11,6 +11,11 @@
       margin-bottom: 5px;
     }
   }
+  a {
+    margin-left: 1rem;
+    color: @zesty-grey;
+    text-decoration: none;
+  }
   .description {
     border-bottom: 1px solid @zesty-light-blue;
     max-width: 50rem;
